Bug 409254 - Stroke selection does not paint outside selection
Summary: Stroke selection does not paint outside selection
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-27 15:07 UTC by vanyossi
Modified: 2019-07-08 14:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vanyossi 2019-06-27 15:07:43 UTC
When Stroke selection is made, the brush outline can't paint outside the selection. The manual shows the stroke should ignore the selection: https://docs.krita.org/en/reference_manual/stroke_selection.html

First mentioned: https://forum.kde.org/viewtopic.php?f=288&t=161375&p=419251#p419251
Comment 1 vanyossi 2019-07-04 15:17:16 UTC
Git commit 8817890bd9e1b07039e8e56a55a795a82d173e25 by Ivan Yossi.
Committed on 04/07/2019 at 15:16.
Pushed by ivany into branch 'master'.

Make selection override use boolean to mark as set

This allows to use null selection objects to temporarly remove selection 
for stroke selections

M  +3    -1    libs/ui/tool/kis_resources_snapshot.cpp

https://invent.kde.org/kde/krita/commit/8817890bd9e1b07039e8e56a55a795a82d173e25
Comment 2 Halla Rempt 2019-07-08 14:59:29 UTC
Git commit 379893106b320392bea6c1e55aa0d63152982fe3 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 08/07/2019 at 14:59.
Pushed by rempt into branch 'krita/4.2'.

Make selection override use boolean to mark as set

This allows to use null selection objects to temporarly remove selection 
for stroke selections

M  +3    -1    libs/ui/tool/kis_resources_snapshot.cpp

https://invent.kde.org/kde/krita/commit/379893106b320392bea6c1e55aa0d63152982fe3