Make selection override use boolean to mark as set

This allows to use null selection objects to temporarly remove selection 
for stroke selections

BUG:409254